--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-github-calendar": "^3.3.3",
     "react-icons": "^4.4.0",
     "react-parallax-tilt": "^1.7.63",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.2.4",
