--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-github-calendar": "^3.3.3",
+    "react-github-calendar": "^3.3.4",
     "react-icons": "^4.4.0",
     "react-parallax-tilt": "^1.7.63",
     "react-pdf": "^5.7.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^4.4.2",
     "react-tsparticles": "^2.2.4",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
