--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
+  "homepage": "https://madhukesh06.github.io",
   "name": "my-portfolio",
-  "homepage": "https://vivekkhade23.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.3.2",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@chakra-ui/icons": "^2.0.9",
+    "@chakra-ui/react": "^2.3.7",
+    "@emailjs/browser": "^3.9.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.1",
-    "framer-motion": "^7.3.2",
+    "emailjs": "^4.0.1",
+    "framer-motion": "^7.6.4",
+    "gh-pages": "^4.0.0",
     "github-calendar": "^2.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-github-calendar": "^3.3.4",
-    "react-icons": "^4.4.0",
-    "react-parallax-tilt": "^1.7.63",
-    "react-pdf": "^5.7.2",
-    "react-router-dom": "^6.3.0",
+    "react-icons": "^4.6.0",
+    "react-parallax-tilt": "^1.7.68",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
-    "react-tooltip": "^4.4.2",
-    "react-tsparticles": "^2.2.4",
+    "react-tooltip": "^4.4.3",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
